--- a/ADMIN/src/main/resources/application.properties
+++ b/ADMIN/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.main.allow-circular-references = true
 
 spring.mail.host=smtp.ethereal.email
 spring.mail.port=587
-spring.mail.username=eugene4@ethereal.email
-spring.mail.password=b7s7DtvJBBvtQgFkVs
+spring.mail.username=gavin.lehner83@ethereal.email
+spring.mail.password=4ckxnzsjmTdTu7Kq8A
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
