--- a/HOME/src/main/resources/application.properties
+++ b/HOME/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+server.port=9090
 
+
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=SMART
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+spring.main.allow-circular-references = true
+
+kieserver.drools.enabled=true
+kieserver.dmn.enabled=true
+
+
+kieserver.swagger.enabled=true
